tests/gcp/basic-auth-ingress/overlays/managed-cert/test_data/expected/extensions_v1beta1_ingress_envoy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: ""
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    kustomize.component: basic-auth-ingress
  name: envoy-ingress
  namespace: kubeflow
spec:
  rules:
  - host: ""
    http:
      paths:
      - backend:
          serviceName: ambassador
          servicePort: 80
        path: /*
