tests/gcp/basic-auth-ingress/overlays/managed-cert/test_data/expected/networking.gke.io_v1beta1_managedcertificate_gke-certificate.yaml
apiVersion: networking.gke.io/v1beta1
kind: ManagedCertificate
metadata:
  labels:
    kustomize.component: basic-auth-ingress
  name: gke-certificate
  namespace: kubeflow
spec:
  domains:
  - ""
