tests/gcp/basic-auth-ingress/overlays/managed-cert/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrole_kf-admin-basic-auth.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRole
metadata:
  labels:
    kustomize.component: basic-auth-ingress
  name: kf-admin-basic-auth
rules:
- apiGroups:
  - ""
  resources:
  - services
  - configmaps
  - secrets
  verbs:
  - get
  - list
  - patch
  - update
- apiGroups:
  - extensions
  - networking.k8s.io
  resources:
  - ingresses
  verbs:
  - get
  - list
  - update
  - patch
