tests/gcp/basic-auth-ingress/overlays/managed-cert/test_data/expected/~g_v1_service_istio-mapping-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: istio-mapping
      prefix_regex: true
      prefix: /(?!whoami|kflogin).*
      rewrite: ""
      service: istio-ingressgateway.istio-system
      precedence: 1
      use_websocket: true
  labels:
    app: istioMappingSvc
    ksonnet.io/component: basic-auth-ingress
    kustomize.component: basic-auth-ingress
  name: istio-mapping-service
  namespace: kubeflow
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: istioMappingSvc
    kustomize.component: basic-auth-ingress
  type: ClusterIP
