tests/gcp/basic-auth-ingress/overlays/managed-cert/test_data/expected/~g_v1_serviceaccount_kf-admin.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    kustomize.component: basic-auth-ingress
  name: kf-admin
  namespace: kubeflow
